# task_manager

./: .gitignore  README.md  main.py  pyproject.toml  requirements-build.txt  requirements.txt
.github/workflows/: ci.yml
app/: cli.py  config.py
app/application/: __init__.py  commands.py  context.py  event_bus.py  events.py  queries.py  results.py  serializers.py  task_app.py
app/domain/: __init__.py  task_rules.py
app/infrastructure/: __init__.py  audit_log.py  json_task_repository.py  task_repository.py
app/models/: task.py
app/resources/: strings.py
app/services/: task_service.py
app/ui/: main_window.py
app/ui/components/: draggable_list.py  task_card.py  task_dialog.py
app/ui/views/: archive_dialog.py  matrix.py  sidebar.py  tag_manager_dialog.py
data/: tags.json
docs/: architecture.md  gemini-summary.md
docs/ai/: AI_INTEGRATION_PLAN.md  COMMAND_CONTRACT.md
scripts/: build_exe.ps1  create_icon.py
skills/task-manager/: SKILL.md
tests/: conftest.py  test_cli.py  test_json_task_repository.py  test_task_application.py  test_task_rules.py  test_task_service.py  test_ui.py
